--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 <body>
     <div class="card">
         <img class="avatar" src="https://i.pravatar.cc/80" alt="Avatar">
-        <h2>Trần Văn Hiển <i class="fa-solid fa-check-circle" style="color:#1da1f2;font-size:14px;"></i></h2>
-        <p>Tôi Là Web Developer</p>
+        <h2>Nguyễn Đình Phúc <i class="fa-solid fa-check-circle" style="color:#1da1f2;font-size:14px;"></i></h2>
+        <p>Developer</p>
 
         <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/SingleNotSorry" target="_blank"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-tiktok"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
