--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="assets/js/tailwind.config.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="assets/js/javaScript.js"></script>
-    <title>Blog</title>
+    <title>Profile</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
