--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </header>
 
 
-    <main id="main-1" class="min-h-screen max-w-4xl mx-auto pt-24 flex items-center justify-center">
+    <main id="main-1" class="min-h-screen max-w-4xl mx-auto pt-24 flex items-center justify-center mb-40">
         <div class="container flex flex-col items-center mx-auto md:flex-row md:justify-center md:space-x-8 px-4">
             <div class="flex-1 text-center md:text-left mb-12 md:mb-0">
                 <p class="mb-2 text-white text-lg">Hello World, I'm</p>
@@ -133,13 +133,13 @@
             </div>
         </div>
     </main>
-    <main id="main-2" class="hidden min-h-screen pt-24 flex items-center justify-center bg-gray-900">
+    <main id="main-2" class="hidden min-h-screen pt-24 flex items-center justify-center bg-gray-900  mb-40">
         <section class="py-4 bg-gray-900 max-w-7xl">
             <div class="container mx-auto px-4">
                 <div class="bg-gray-800 p-8 rounded-lg shadow-xl border border-gray-700">
                     <div class="border-b border-gray-600 pb-4 mb-6 flex items-center gap-2">
                         <h2 class="text-2xl font-bold text-white mb-2">About Me</h2>
-                        <div class="w-44 h-1 bg-yellow-400 rounded-full"></div>
+                        <div class="w-32 h-1 bg-yellow-400 rounded-full"></div>
                     </div>
                     <div class="flex flex-col md:flex-row items-start md:space-x-8 gap-8">
                         <img src="assets/image/avatar-1.jpg" alt="Đình Phúc"
@@ -199,7 +199,7 @@
             </div>
         </section>
     </main>
-    <main id="main-3" class="hidden min-h-screen pt-24 flex items-center justify-center bg-gray-900">
+    <main id="main-3" class="hidden min-h-screen pt-24 flex items-center justify-center bg-gray-900  mb-40">
         <section class="py-4 bg-gray-900 max-w-7xl">
             <div class="container mx-auto px-4">
                 <div class="mb-12 text-center">
