add meta property

--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- Open Graph cho Facebook, Zalo -->
+    <meta property="og:title" content="personal" />
+    <meta property="og:description" content="Profile website do Phúc xấu trai phát triển." />
+    <meta property="og:image" content="https://phuckk05.github.io/my_blog/assets/image/blog-10.jpg" />
+    <meta property="og:url" content="https://phuckk05.github.io/my_blog/" />
+    <meta property="og:type" content="website" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="assets/js/javaScript.js"></script>
-    <title>Profile</title>
+    <title>Profile của Phúc xấu trai</title>
+
 </head>
 
 <body class="bg-gray-900 text-white">
