--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- Open Graph cho Facebook, Zalo -->
-    <meta property="og:title" content="personal" />
+    <meta property="og:title" content="Đình Phúc" />
     <meta property="og:description" content="Profile website do Phúc xấu trai phát triển." />
     <meta property="og:image" content="https://phuckk05.github.io/my_blog/assets/image/blog-10.jpg" />
     <meta property="og:url" content="https://phuckk05.github.io/my_blog/" />
